# scanpro

./: .gitlab-ci.yml  .readthedocs.yml  CHANGES.rst  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  build_docs.yml  publish_pypi.yml  test.yml
Alayoubi_et_al_2023/: 1_PBMC_dataset.ipynb  1a_PBMC_dataset.ipynb  1b_PBMC_dataset_covariates.ipynb  2_Heart_dataset.ipynb  3_Covid_dataset.ipynb  3_scATAC_atlas_dataset.ipynb  4_Human_MI_dataset.ipynb  4b_Human_MI_dataset_covariates.ipynb  5_Covid_dataset.ipynb  5_scATAC_atlas_dataset.ipynb  5_scatac_atlas_dataset.ipynb  6_Simulation_tests.ipynb  7_Simulations_with_increasing_counts.ipynb  8_benchmarking_plots.ipynb  9_tool_comparison_plots.ipynb  README.md  Scanpro_bootstrap.ipynb  tool_comparison.ipynb  validate_implementation.ipynb
Alayoubi_et_al_2024/: 2_Heart_dataset.ipynb  4_Human_MI_dataset.ipynb  8_benchmarking_plots.ipynb  README.md
docs/: README.md  required_packages.txt
examples/: proportion_analysis.ipynb  reps_simulation.ipynb  scanpro_tutorial.h5ad
pypropeller/: ebayes.py  fitFDist.py  get_transformed_props.py  linear_model.py  pypropeller.py  result.py  sim_reps.py  utils.py
scanpro/: __init__.py  ebayes.py  fitFDist.py  gaussq2.py  gaussq2.pyf  get_transformed_props.py  linear_model.py  logging.py  result.py  scanpro.py  sim_reps.py  utils.py
tests/: test_ebayes.py  test_fitFDist.py  test_gaussq2.py  test_get_transformed_props.py  test_linear_model.py  test_pypropeller.py  test_scanpro.py  test_sim_reps.py  test_utils.py
(+162 files in other folders)
